--- a/src/app/pages/employee/food/food.component.html
+++ b/src/app/pages/employee/food/food.component.html
@@ -17,23 +17,96 @@ aria-label="Example icon-button with a menu"
   <mat-icon>shopping_basket</mat-icon>
 </button>
 </mat-toolbar>
+
+
+<mat-tab-group mat-align-tabs="center">
+  <mat-tab label="First">
 <div style="display: flex; flex-direction: row; justify-content: space-around;">
-<mat-card class="example-card" *ngFor="let item of data;">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image" ></div>
-      <mat-card-title>{{item.name}}</mat-card-title>
-      <mat-card-subtitle>{{item.detail}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="{{item.img}}" alt="Photo of a Shiba Inu" style="width: 300px; height: 300px;">
-    <mat-card-content>
-      <p style="text-align: center;">
-        ราคา : {{item.price}} บาท
-      </p>
-    </mat-card-content>
-    <mat-card-actions style="text-align: center;">
-      <mat-label>จำนวน</mat-label>
-      <input type="number" matInput placeholder="amount" [(ngModel)]="item.amount" name="amount">
-      <button mat-button (click)="addToCart(item)">เพิ่มสินค้า</button>
-    </mat-card-actions>
-  </mat-card>
-</div>
+  <mat-card class="example-card" *ngFor="let item of dataFood;">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image" ></div>
+        <mat-card-title>{{item.name}}</mat-card-title>
+        <mat-card-subtitle>{{item.detail}}</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="{{item.img}}" alt="Photo of a Shiba Inu" style="width: 300px; height: 300px;">
+      <mat-card-content>
+        <p style="text-align: center;">
+          ราคา : {{item.price}} บาท
+        </p>
+      </mat-card-content>
+      <mat-card-actions style="text-align: center;">
+        <mat-label>จำนวน</mat-label>
+        <input type="number" matInput placeholder="amount" [(ngModel)]="item.amount" name="amount">
+        <button mat-button (click)="addToCart(item)">เพิ่มสินค้า</button>
+      </mat-card-actions>
+</mat-card>
+  </div>
+  </mat-tab>
+
+  <mat-tab label="Second">
+      <div style="display: flex; flex-direction: row; justify-content: space-around;">
+      <mat-card class="example-card" *ngFor="let item of dataAppetizer;">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image" ></div>
+            <mat-card-title>{{item.name}}</mat-card-title>
+            <mat-card-subtitle>{{item.detail}}</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="{{item.img}}" alt="Photo of a Shiba Inu" style="width: 300px; height: 300px;">
+          <mat-card-content>
+            <p style="text-align: center;">
+              ราคา : {{item.price}} บาท
+            </p>
+          </mat-card-content>
+          <mat-card-actions style="text-align: center;">
+            <mat-label>จำนวน</mat-label>
+            <input type="number" matInput placeholder="amount" [(ngModel)]="item.amount" name="amount">
+            <button mat-button (click)="addToCart(item)">เพิ่มสินค้า</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+  </mat-tab>
+  <mat-tab label="Third">
+    <div style="display: flex; flex-direction: row; justify-content: space-around;">
+      <mat-card class="example-card" *ngFor="let item of dataDrink;">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image" ></div>
+            <mat-card-title>{{item.name}}</mat-card-title>
+            <mat-card-subtitle>{{item.detail}}</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="{{item.img}}" alt="Photo of a Shiba Inu" style="width: 300px; height: 300px;">
+          <mat-card-content>
+            <p style="text-align: center;">
+              ราคา : {{item.price}} บาท
+            </p>
+          </mat-card-content>
+          <mat-card-actions style="text-align: center;">
+            <mat-label>จำนวน</mat-label>
+            <input type="number" matInput placeholder="amount" [(ngModel)]="item.amount" name="amount">
+            <button mat-button (click)="addToCart(item)">เพิ่มสินค้า</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+  </mat-tab>
+  <mat-tab label="Four">
+    <div style="display: flex; flex-direction: row; justify-content: space-around;">
+      <mat-card class="example-card" *ngFor="let item of dataNoodle;">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image" ></div>
+            <mat-card-title>{{item.name}}</mat-card-title>
+            <mat-card-subtitle>{{item.detail}}</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="{{item.img}}" alt="Photo of a Shiba Inu" style="width: 300px; height: 300px;">
+          <mat-card-content>
+            <p style="text-align: center;">
+              ราคา : {{item.price}} บาท
+            </p>
+          </mat-card-content>
+          <mat-card-actions style="text-align: center;">
+            <mat-label>จำนวน</mat-label>
+            <input type="number" matInput placeholder="amount" [(ngModel)]="item.amount" name="amount">
+            <button mat-button (click)="addToCart(item)">เพิ่มสินค้า</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+  </mat-tab>
+</mat-tab-group>
