--- a/src/app/pages/main-cart/main-cart.component.html
+++ b/src/app/pages/main-cart/main-cart.component.html
@@ -34,7 +34,7 @@
     <ng-container matColumnDef="todo">
         <th mat-header-cell *matHeaderCellDef> Todo </th>
         <td mat-cell *matCellDef="let element">
-            <button mat-flat-button color="accent">ลบ</button>
+            <button mat-flat-button color="accent" (click)="delete(element)">ลบ</button>
         </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -42,5 +42,5 @@
   </table>
 
 <div style="margin-top: 10px;">
-    <button mat-flat-button color="primary" style="width: 100%; ">ยืนยัน</button>
+    <button mat-flat-button color="primary" style="width: 100%;" (click)="appoveOrder()">ยืนยัน</button>
 </div>
